--- a/book.tex
+++ b/book.tex
@@ -1338,9 +1338,6 @@ average time per mile?  What is your average speed in miles per hour?
 
 \end{ex}
 
-% XXXX
-
-
 \chapter{Variables, expressions and statements}
 
 \section{Values and types}
@@ -5639,6 +5636,20 @@ using dot notation.
 \item[invocation:] A statement that calls a method.
 \index{invocation}
 
+\item[format operator:] An operator, {\tt \%}, that takes a format
+string and a tuple and generates a string that includes
+the elements of the tuple formatted as specified by the format string.
+\index{format operator}
+\index{operator!format}
+
+\item[format string:] A string, used with the format operator, that
+contains format sequences.
+\index{format string}
+
+\item[format sequence:] A sequence of characters in a format string,
+like {\tt \%d}, that specifies how a value should be formatted.
+\index{format sequence}
+
 \end{description}
 
 
@@ -5799,11 +5810,6 @@ Or in the case of a USB memory drive, the
 data can we write from our programs can be removed from the 
 system and transported to another system.
 
-One of the simplest ways for programs to maintain their data
-is by reading and writing text files.  We have already seen
-programs that read text files; in this chapters we will see programs
-that write them.
-
 We will primarily focus on reading and writing text files such as 
 those we create in a text editor.  Later we will see how to work
 with database files which are binary files, specificially designed to be read
@@ -5811,9 +5817,11 @@ and written through database software.
 
 \section{Opening files}
 \index{file!open}
+\index{open function}
+\index{function!open}
 
 When we want to read or write a file (say on your hard drive), we first
-must {\tt open} the file.  Opening the file communicates with your operating
+must {\bf open} the file.  Opening the file communicates with your operating
 system which knows where the data for each file is stored.  When you open
 a file, you are asking the operating system to find the file by name
 and make sure the file exists.
@@ -5827,7 +5835,7 @@ and make sure the file exists.
 \afterverb
 %
 \index{file handle}
-If the {\tt open} is successful, the operating system gives a 
+If the {\tt open} is successful, the operating system returns us a 
 {\bf file handle}.  The file handle is not the actual data contained
 in the file, but instead it is a ``handle'' that we can use to 
 read the data.   You are given a handle if the requested file
@@ -5923,8 +5931,9 @@ So the newline character separates the characters
 in in the file into lines.
 
 \section{Reading files}
-\index{file!reading}
 
+\index{file!reading}
+\index{counter}
 While the {\bf file handle} does not contain the data for the file,
 it is quite easy to construct a {\tt for} loop to read through 
 and count each of the lines in a file:
@@ -5956,7 +5965,8 @@ read from the file.
 
 When the file is read using a {\tt for} loop in this manner, Python
 takes care of splitting the data in the file into separate lines using
-the newline character.  Python reads line through the newline and includes
+the newline character.  Python reads each line through 
+the newline and includes
 the newline as the last character in the {\tt line} variable for each 
 iteration of the {\tt for} loop.
 
@@ -5984,11 +5994,12 @@ From stephen.marquar
 In this example, the entire contents (all 94,626 characters) 
 of the file {\tt mbox-short.txt} are read directly into the 
 variable {\tt inp}.  We use string slicing to print out the first
-20 characters of the dstring data stored in {\tt inp}.
+20 characters of the string data stored in {\tt inp}.
 
 When the file is read in this manner, all the characters including 
-all of the newlines are in the variable {\bf inp}.  Remember
-that this form of the {\tt open} function should only be used
+all of the lines and newline characters are one big string 
+in the variable {\bf inp}.  
+Remember that this form of the {\tt open} function should only be used
 if the file data will fit comfortably in the main memory 
 of your computer.
 
@@ -5998,16 +6009,353 @@ loop.
 
 \section{Searching through a file}
 
-\section{Reading and writing}
+It is a very common pattern to read through a file, ignoring most
+of the lines and processing lines which meet a particular criteria.
+We can combine the pattern for reading a file with string {\bf methods}
+to build simple search mechanisms.
 
-\index{file!reading and writing}
+For example, if we wanted to read a file and only print out lines
+which started with the prefis ``From:'', we could use the 
+string method {\bf startswith} to select only those lines with
+the desired prefix:
 
-A text file is a sequence of characters stored on a permanent
-medium like a hard drive, flash memory, or CD-ROM.  We saw how
-to open and read a file in Section~\ref{wordlist}.
+\beforeverb
+\begin{verbatim}
+fhand = open("mbox-short.txt")
+for line in fhand:
+    if line.startswith('From:') :
+        print line
+\end{verbatim}
+\afterverb
+%
+When this program runs, we get the following output:
 
+\beforeverb
+\begin{verbatim}
+From: stephen.marquard@uct.ac.za
+
+From: louis@media.berkeley.edu
+
+From: zqian@umich.edu
+
+From: rjlowe@iupui.edu
+...
+\end{verbatim}
+\afterverb
+%
+The output looks great since the only lines we are seeing are those 
+which start with ``From:'', but why are we seeing the extra blank
+lines?  This is due to that invisible {\bf newline} character.
+Each of the lines ends with a newline and so the {\tt print} 
+statement prints the string in the variable {\bf line} which includes
+a newline and then {\tt print} adds {\em another} newline, resulting
+in the double spacing effect we see.
+
+We could use line slicing to print all but the last character, but 
+a simpler approach is to use the {\bf rstrip} method which strips
+whitespace from the right side of a string as follows:
+
+\beforeverb
+\begin{verbatim}
+fhand = open("mbox-short.txt")
+for line in fhand:
+    line = line.rstrip()
+    if line.startswith('From:') :
+        print line
+\end{verbatim}
+\afterverb
+%
+When this program runs, we get the following output:
+
+\beforeverb
+\begin{verbatim}
+From: stephen.marquard@uct.ac.za
+From: louis@media.berkeley.edu
+From: zqian@umich.edu
+From: rjlowe@iupui.edu
+From: zqian@umich.edu
+From: rjlowe@iupui.edu
+From: cwen@iupui.edu
+...
+\end{verbatim}
+\afterverb
+%
+As your file processing programs get more complicated, you may want 
+to structure your search loops using {\tt continue}.  The basic idea 
+of the search loop is that you are looking for ``interesting'' lines
+and effectively skipping ``uninteresting'' lines.  And then when we
+find an interesting line, we do something with that line.
+
+We can structure the loop to follow the
+pattern of skipping uninteresting lines as follows:
+
+\beforeverb
+\begin{verbatim}
+fhand = open("mbox-short.txt")
+for line in fhand:
+    line = line.rstrip()
+    # Skip 'uninteresting lines'
+    if not line.startswith('From:') :
+        continue
+    # Process our 'interesting' line
+    print line
+\end{verbatim}
+\afterverb
+%
+The output of the program is the same.  In English, the 
+uninteresting lines are those which do not start 
+with ``From:'', which we skip using {\tt continue}.
+For the ``interesting'' lines (i.e. those that start with ``From:'')
+we perform the processing on those lines.
+
+We can use the {\tt find} string method to simiulate a text editor
+search which finds lines where the search string is anywhere in the line.  
+Since {\tt find} looks for an occurance of a string within another
+string and either returns the position of the string or -1 if the string
+was not found, we can write the following loop to show lines which
+contain the string ``@uct.ac.za'' (i.e. they come from the University 
+of Capetown in South Africa):
+
+\beforeverb
+\begin{verbatim}
+fhand = open("mbox-short.txt")
+for line in fhand:
+    line = line.rstrip()
+    if line.find('@uct.ac.za') == -1 : continue
+    print line
+\end{verbatim}
+\afterverb
+%
+Which produces the following output:
+
+\beforeverb
+\begin{verbatim}
+From stephen.marquard@uct.ac.za Sat Jan  5 09:14:16 2008
+X-Authentication-Warning: set sender to stephen.marquard@uct.ac.za using -f
+From: stephen.marquard@uct.ac.za
+Author: stephen.marquard@uct.ac.za
+From david.horwitz@uct.ac.za Fri Jan  4 07:02:32 2008
+X-Authentication-Warning: set sender to david.horwitz@uct.ac.za using -f
+From: david.horwitz@uct.ac.za
+Author: david.horwitz@uct.ac.za
+...
+\end{verbatim}
+\afterverb
+%
+
+\section{Parsing lines}
+
+Usually we want to do something to the lines other than just 
+printing the whole line.  Often we want to find the ``interesting
+lines'' and then {\bf parse} the line to find some interesting
+{\em part} of the line.  What if we wanted to print out the day of the 
+week from those lines that start with ``From ''.
+
+{\tt
+From stephen.marquard@uct.ac.za {\bf Sat} Jan  5 09:14:16 2008
+}
+
+Python provides a very useful string method called {\tt split}
+which breaks a string into parts based on whitespace:
+
+\beforeverb
+\begin{verbatim}
+>>> line = "Have a nice day"
+>>> words = line.split()
+>>> print words
+['Have', 'a', 'nice', 'day']
+>>> print len(words)
+4
+>>> print words[2]
+nice
+\end{verbatim}
+\afterverb
+%
+The {\tt split} method reads through the string and returns a
+list of strings representing each {\bf token} in the string.
+We store this list of words in a mnemonically-named variable
+called {\tt words}.  Using the {\tt len} function, we see that
+splitting the string yeilded four words and the third word 
+({\tt word[2]}) is ``nice''.
+
+So we can write a small program that looks for lines where the 
+line starts with ``From '' and then print out the third word in the 
+line:
+
+\beforeverb
+\begin{verbatim}
+fhand = open("mbox-short.txt")
+for line in fhand:
+    line = line.rstrip()
+    if not line.startswith('From ') : continue
+    words = line.split()
+    print words[2]
+\end{verbatim}
+\afterverb
+%
+The program produces the following output:
+
+\beforeverb
+\begin{verbatim}
+Sat
+Fri
+Fri
+Fri
+    ...
+\end{verbatim}
+\afterverb
+%
+Later, we will learn increasingly sophisticated techniques for
+picking the lines to work on and how we pull those lines apart
+to find the exact bit of information we are looking for.
+
+\section{Letting the user choose the file name}
+
+We really do not want to have to edit our Python code
+every time we want to process a different file.  It would 
+be more usable to ask the user to enter the file name string 
+each time the program runs so they can use our 
+program on different files without changing the Python code.
+
+This is quite simple to do by reading the file name from
+the user using \verb"raw_input" as follows:
+
+\beforeverb
+\begin{verbatim}
+fname = raw_input("Enter the file name: ")
+fhand = open(fname)
+count = 0
+for line in fhand:
+    if line.startswith('Subject:') :
+        count = count + 1
+print 'There were', count, 'subject lines in', fname
+\end{verbatim}
+\afterverb
+%
+We read the file name from the user and place it in a variable
+named {\tt fname} and open that file.  Now we can run the program 
+repeatedly on different files.
+
+\beforeverb
+\begin{verbatim}
+python search6.py 
+Enter the file name: mbox.txt
+There were 1797 subject lines in mbox.txt
+
+python search6.py 
+Enter the file name: mbox-short.txt
+There were 27 subject lines in mbox-short.txt
+\end{verbatim}
+\afterverb
+%
+Before peeking at the next section, take a look at the above program
+and ask yourself, ``What could go possibly wrong here?'' or ``What might our
+friendly user do that would cause our nice little program to 
+ungracefully exit with a trace back, making us look not-so-cool 
+in the eyes of our users?''.
+
+\section{Using {\tt try, catch,} and {\tt open}}
+
+I told you not to peek - this is your last chance.
+
+What if our user types something that is not a file name?
+\beforeverb
+\begin{verbatim}
+python search6.py 
+Enter the file name: missing.txt
+Traceback (most recent call last):
+  File "search6.py", line 2, in <module>
+    fhand = open(fname)
+IOError: [Errno 2] No such file or directory: 'missing.txt'
+
+python search6.py 
+Enter the file name: na na boo boo
+Traceback (most recent call last):
+  File "search6.py", line 2, in <module>
+    fhand = open(fname)
+IOError: [Errno 2] No such file or directory: 'na na boo boo'
+\end{verbatim}
+\afterverb
+%
+Do not laugh, users will eventually do every possible thing they can do 
+to break your programs - either on purpose or with mailcious intent.
+As a matter of fact, an important part of any software development
+team is a person or group called {\bf Quality Assurance} (or QA for short)
+whose very job it is to do the craziest things possible in an attempt
+to break the software that the programmer has created.
+
+\index{Quality Assurance}
+\index{QA}
+The QA team is responsible for finding the flaws in programs before 
+we have delivered the program to the end-users who may be purchasing the
+software or paying our salary to write the software.  So the QA team
+is the programmer's best friend.
+
+\index{try statement}
+\index{statement!try}
 \index{open function}
 \index{function!open}
+\index{exception!IOError}
+\index{IOError}
+So now that we see the flaw in the program, we can elegantly fix it using
+the {\tt try}/{\tt except} structure.  We need to assume that the {\tt open}
+call might fail and add recovery code when the {\tt open} fails
+as follows:
+
+\beforeverb
+\begin{verbatim}
+fname = raw_input("Enter the file name: ")
+try:
+    fhand = open(fname)
+except:
+    print 'File cannot be opened:', fname
+    exit()
+
+count = 0
+for line in fhand:
+    if line.startswith('Subject:') : 
+        count = count + 1
+print 'There were', count, 'subject lines in', fname
+\end{verbatim}
+\afterverb
+%
+The {\tt exit} function terminates the program.  It is a function
+that we call that never returns.  Now when our user (or 
+QA team) types in silliness or bad file names, 
+we ``catch'' then and recover gracefully:
+\beforeverb
+\begin{verbatim}
+python search7.py
+Enter the file name: mbox.txt
+There were 1797 subject lines in mbox.txt
+
+python search7.py
+Enter the file name: na na boo boo
+File cannot be opened: na na boo boo
+\end{verbatim}
+\afterverb
+%
+\index{Pythonic}
+Protecting the {\tt open} call is a good example 
+of the proper use of {\bf try}
+and {\tt except} in a Python program.  We use the term
+``Pythonic'' when we are doing something the ``Python
+way''.  We might say that the above example is 
+the Pythonic way to open a file.
+
+Once you become more skilled in Python, you can engage
+in reparte' with other Python programmers to decide
+which of two equivalent solutions to a problem is 
+``more Pythonic''.  The goal to be ``more Pythonic'' 
+captures the notion that programming is part engineering
+and part art.  We are not always interested
+in just makeing something work - we also want
+our solution to be elegant.
+
+
+\section{Writing files}
+
+\index{file!writing}
 
 To write a file, you have to open it with mode
 \verb"'w'" as a second parameter:
@@ -6024,7 +6372,8 @@ If the file already exists, opening it in write mode clears out
 the old data and starts fresh, so be careful!
 If the file doesn't exist, a new one is created.
 
-The {\tt write} method puts data into the file.
+The {\tt write} method of the file handle object 
+puts data into the file.
 
 \beforeverb
 \begin{verbatim}
@@ -6033,8 +6382,15 @@ The {\tt write} method puts data into the file.
 \end{verbatim}
 \afterverb
 %
+\index{newline}
 Again, the file object keeps track of where it is, so if
 you call {\tt write} again, it adds the new data to the end.
+
+We must make sure to manage the ends of lines as we write
+to the file by explicitly inserting the newline character
+when we want to end a line.  The {\tt print} statement 
+automatically appends a newline, but the {\tt write} 
+method does not add the newline automatically.
 
 \beforeverb
 \begin{verbatim}
@@ -6043,7 +6399,9 @@ you call {\tt write} again, it adds the new data to the end.
 \end{verbatim}
 \afterverb
 %
-When you are done writing, you have to close the file.
+When you are done writing, you have to close the file
+to make sure that the last bit of data is physically written
+to the disk so it will not be lost if the power goes off.
 
 \beforeverb
 \begin{verbatim}
@@ -6051,87 +6409,15 @@ When you are done writing, you have to close the file.
 \end{verbatim}
 \afterverb
 %
+We could close the files which we open for read as well, 
+but we can be a little sloppy if we are only opening a few
+files since Python makes sure that all open files are 
+closed when the program ends.  When we are writing files, 
+we want to explicitly close the files so as to leave nothing
+to chance.
 
 \index{close method}
 \index{method!close}
-
-
-\section{Catching exceptions}
-\label{catch}
-
-A lot of things can go wrong when you try to read and write
-files.  If you try to open a file that doesn't exist, you get an
-{\tt IOError}:
-
-\index{open function}
-\index{function!open}
-\index{exception!IOError}
-\index{IOError}
-
-\beforeverb
-\begin{verbatim}
->>> fin = open('bad_file')
-IOError: [Errno 2] No such file or directory: 'bad_file'
-\end{verbatim}
-\afterverb
-%
-If you don't have permission to access a file:
-
-\index{file!permission}
-\index{permission, file}
-
-\beforeverb
-\begin{verbatim}
->>> fout = open('/etc/passwd', 'w')
-IOError: [Errno 13] Permission denied: '/etc/passwd'
-\end{verbatim}
-\afterverb
-%
-And if you try to open a directory for reading, you get
-
-\beforeverb
-\begin{verbatim}
->>> fin = open('/home')
-IOError: [Errno 21] Is a directory
-\end{verbatim}
-\afterverb
-%
-To avoid these errors, you could use functions like {\tt os.path.exists}
-and {\tt os.path.isfile}, but it would take a lot of time and code
-to check all the possibilities (if ``{\tt Errno 21}'' is any
-indication, there are at least 21 things that can go wrong).
-
-\index{exception, catching}
-\index{try statement}
-\index{statement!try}
-
-It is better to go ahead and try, and deal with problems if they
-happen, which is exactly what the {\tt try} statement does.  The
-syntax is similar to an {\tt if} statement:
-
-\beforeverb
-\begin{verbatim}
-try:    
-    fin = open('bad_file')
-    for line in fin:
-        print line
-    fin.close()
-except:
-    print 'Something went wrong.'
-\end{verbatim}
-\afterverb
-%
-Python starts by executing the {\tt try} clause.  If all goes
-well, it skips the {\tt except} clause and proceeds.  If an
-exception occurs, it jumps out of the {\tt try} clause and
-executes the {\tt except} clause.
-
-Handling an exception with a {\tt try} statement is called {\bf
-catching} an exception.  In this example, the {\tt except} clause
-prints an error message that is not very helpful.  In general,
-catching an exception gives you a chance to fix the problem, or try
-again, or at least end the program gracefully.
-
 
 
 \section{Debugging}
@@ -6184,54 +6470,195 @@ format to another.  You can find them (and read more about this
 issue) at \url{wikipedia.org/wiki/Newline}.  Or, of course, you
 could write one yourself.
 
+% TBD - Doesn't Python take care of this for us????
+
+When we read and parse files, there are many opportunities
+to encounter input that can crash our program so it is a good 
+idea to revisit the {\bf guardian} pattern when it comes
+writing programs that read through a file 
+and look for a "needle in the haystack".
+
+Lets revisit our program that is looking for the day of the
+week on the from lines of our file.:
+
+{\tt
+From stephen.marquard@uct.ac.za {\bf Sat} Jan  5 09:14:16 2008
+}
+
+Since we are breaking this line into words, we could dispense
+with the use of {\tt startswith} and simply look at the 
+first word of the line to determine if we are interested
+in the line at all.  We can use {\tt continue} to skip lines
+that don't have ``From'' as the first word as follows:
+
+\beforeverb
+\begin{verbatim}
+fhand = open("mbox-short.txt")
+for line in fhand:
+    words = line.split()
+    if words[0] != 'From' : continue
+    print words[2]
+\end{verbatim}
+\afterverb
+%
+This looks much simpler and we don't even need to do the 
+{\tt rstrip} to remove the newline at the end of the file.
+But is it better?
+
+\beforeverb
+\begin{verbatim}
+python search8.py 
+Sat
+Traceback (most recent call last):
+  File "search8.py", line 5, in <module>
+    if words[0] != 'From' : continue
+IndexError: list index out of range
+\end{verbatim}
+\afterverb
+%
+It kind of works - we see the day from the first from line
+(Sat) but then the program fails with a traceback error.
+What went wrong?  What messed-up data caused our elegant, 
+clever and very Pythonic program to fail?
+
+You could stare at it for a long time and puzzle through
+it or ask someone for help, but the quicker and smarter
+approach is to add a {\tt print statement}.  And the best place
+to add the print statement is right before the line where
+the program failed and print out the data that seems to be causing
+the failure.
+
+Now this approach may generate a lot of lines of output - but at 
+least you will immediately have some clue as to the 
+problem at hand.  So we add a print of the variable
+{\tt words} right before line five.  We even 
+add a prefix ``Debug:'' to the line so we can keep
+our regular output separate from our debug output.
+
+\beforeverb
+\begin{verbatim}
+for line in fhand:
+    words = line.split()
+    print 'Debug:', words
+    if words[0] != 'From' : continue
+    print words[2
+\end{verbatim}
+\afterverb
+%
+When we run the program, a lot of output scrolls off the screen
+but at the end, we see our debug output and the traceback so 
+we know what happenned just before the traceback.
+
+\beforeverb
+\begin{verbatim}
+Debug: ['X-DSPAM-Confidence:', '0.8475']
+Debug: ['X-DSPAM-Probability:', '0.0000']
+Debug: []
+Traceback (most recent call last):
+  File "search9.py", line 6, in <module>
+    if words[0] != 'From' : continue
+IndexError: list index out of range
+\end{verbatim}
+\afterverb
+%
+Each debug line is printing the list of words which we get
+when we {\tt split} the line into words.  When the program fails
+the list of words is empty \verb"[]".  If we open the file in a text editor
+and look at the file, at that point it looks as follows:
+
+\beforeverb
+\begin{verbatim}
+X-DSPAM-Result: Innocent
+X-DSPAM-Processed: Sat Jan  5 09:14:16 2008
+X-DSPAM-Confidence: 0.8475
+X-DSPAM-Probability: 0.0000
+
+Details: http://source.sakaiproject.org/viewsvn/?view=rev&rev=39772
+\end{verbatim}
+\afterverb
+%
+The error occurs when our program encounters a blank line! Of course there
+are ``zero words'' on a blank line - why did't we think of that 
+when we were writing the code.  When the code looks for the first
+word (\verb"word[0]") to check to see if it matches ``From'', 
+we get an ``index out of range'' error.
+
+This of course is the perfect place to add some {\bf guardian} code 
+to avoid checking the first word if the first word is not there.
+There are many ways to protect this code, we will choose to 
+check the number of words we have before we look at the first word:
+
+\beforeverb
+\begin{verbatim}
+fhand = open("mbox-short.txt")
+count = 0
+for line in fhand:
+    words = line.split()
+    # print 'Debug:', words
+    if len(words) == 0 : continue
+    if words[0] != 'From' : continue
+    print words[2]
+\end{verbatim}
+\afterverb
+%
+First we commented out the debug print statement instead of removing it 
+in case our modification fails and we need to debug again.  Then we added
+a guardian statement that checks to see if we have zero words, and if so, 
+we use {\tt continue} to skip to the next line in the file.
+
+We can think of the two {\tt continue} statements as helping us refine
+the set of lines which are ``interesting'' to us and which we want 
+to process some more.  A line which has no words is uninteresting to 
+us so we skip to the next line.  A line which does not have ``From''
+as its first word is uninteresting to us so we skip it.
+
+The program as modified runs successfully so perhaps it is correct.  Our
+guardian statement does make sure that the {\tt words[0]} will never fail, 
+but perhaps it is not enough.  When we are programming, we must always be 
+thinking, ``What might go wrong?''.
+
+\begin{ex}
+Figure out which line of the above program is still not properly guarded.
+See if you can construct a text file which causes the program to fail
+and then modify the program so that the line is properly guarded and 
+test it to make sure it handles your new text file.
+\end{ex}
+
+\begin{ex}
+Rewrite the guardian code in the above example without two
+{\tt if} statements.  Instead use a compound logical expression using the
+{\tt and} logical operator with a single {\tt if} statement.
+\end{ex}
+
 
 \section{Glossary}
 
 \begin{description}
 
-\item[persistent:] Pertaining to a program that runs indefinitely
-and keeps at least some of its data in permanent storage.
-\index{persistence}
-
-\item[format operator:] An operator, {\tt \%}, that takes a format
-string and a tuple and generates a string that includes
-the elements of the tuple formatted as specified by the format string.
-\index{format operator}
-\index{operator!format}
-
-\item[format string:] A string, used with the format operator, that
-contains format sequences.  
-\index{format string}
-
-\item[format sequence:] A sequence of characters in a format string,
-like {\tt \%d}, that specifies how a value should be formatted.
-\index{format sequence}
-
 \item[text file:] A sequence of characters stored in permanent
 storage like a hard drive.
 \index{text file}
 
-\item[directory:] A named collection of files, also called a folder.
-\index{directory}
-
-\item[path:] A string that identifies a file.
-\index{path}
-
-\item[relative path:] A path that starts from the current directory.
-\index{relative path}
-
-\item[absolute path:] A path that starts from the topmost directory
-in the file system.
-\index{absolute path}
+\item[newline:] A special character used in files and strings to indicate
+the end of a line.
+\index{newline}
 
 \item[catch:] To prevent an exception from terminating
 a program using the {\tt try}
 and {\tt except} statements.
 \index{catch}
 
-\item[database:] A file whose contents are organized like a dictionary
-with keys that correspond to values.
-\index{database}
+\item[Quality Assurance:] A person or team focused on insuring the 
+overall quality of a software product.  QA is often involved 
+in testing a product and identifying ptoblems before the product 
+is released.
+\index{Quality Assurance}
+\index{QA}
+
+\item[Pythonic:] A techinque that works elegantly in Python.
+``Using try and except is the {\em Pythonic} way to recover from 
+missing files.''.
+\index{Pythonic}
 
 \end{description}
 
@@ -6240,77 +6667,34 @@ with keys that correspond to values.
 
 
 \begin{ex}
-
-\index{Internet Movie Database (IMDb)}
-\index{IMDb (Internet Movie Database)}
-\index{database}
-
-The Internet Movie Database (IMDb) is an online collection of
-information about movies.  Their database is available
-in plain text format, so it is reasonably easy to read from
-Python.  For this exercise, the files you need
-are {\tt actors.list.gz} and {\tt actresses.list.gz}; you
-can download them from \url{www.imdb.com/interfaces#plain}.
-
-\index{plain text}
-\index{text!plain}
-\index{parse}
-
-I have written a program that parses these files and
-splits them into actor names, movie titles, etc.  You can
-download it from \url{thinkpython.com/code/imdb.py}.
-
-If you run {\tt imdb.py} as a script, it reads {\tt actors.list.gz}
-and prints one actor-movie pair per line.  Or, if you {\tt import
-imdb} you can use the function \verb"process_file" to, well,
-process the file.  The arguments are a filename, a function
-object and an optional number of lines to process.  Here is
-an example:
+Sometimes when programmers get bored or want to have a bit of fun,
+they add a harmless {\bf Easter Egg} to their program 
+(\url{en.wikipedia.org/wiki/Easter_egg_(media)}). Modify the program
+that prompts the user for the file name so that it prints a funny
+message when the user types in the exact file name 'na na boo boo'. 
+The program should behave normally for all other files which exist
+and don't exist.  Here is a sample execution of the program:
 
 \beforeverb
 \begin{verbatim}
-import imdb
+python egg.py 
+Enter the file name: mbox.txt
+There were 1797 subject lines in mbox.txt
 
-def print_info(actor, date, title, role):
-    print actor, date, title, role
+python egg.py 
+Enter the file name: missing.tyxt
+File cannot be opened: missing.tyxt
 
-imdb.process_file('actors.list.gz', print_info)
+python egg.py 
+Enter the file name: na na boo boo
+NA NA BOO BOO TO YOU - You have been punk'd!
 \end{verbatim}
 \afterverb
-
-When you call \verb"process_file", it opens {\tt filename}, reads the
-contents, and calls \verb"print_info" once for each line in the file.
-\verb"print_info" takes an actor, date, movie title and role as
-arguments and prints them.
-
-\begin{enumerate}
-
-\item Write a program that reads {\tt actors.list.gz} and {\tt
-  actresses.list.gz} and uses {\tt shelve} to build a database
-that maps from each actor to a list of his or her films.
-
-\index{shelve module}
-\index{module!shelve}
-
-\item Two actors are ``costars'' if they have been in at least one
-  movie together.  Process the database you built in the previous step
-  and build a second database that maps from each actor to a list of
-  his or her costars.
-
-\index{Bacon, Kevin}
-\index{Kevin Bacon Game}
-
-\item Write a program that can play the ``Six Degrees of Kevin
-  Bacon,'' which you can read about at
-  \url{wikipedia.org/wiki/Six_Degrees_of_Kevin_Bacon}.  This
-problem is challenging because it requires you to find the shortest
-path in a graph.  You can read about shortest path algorithms
-at \url{wikipedia.org/wiki/Shortest_path_problem}.
-
-\end{enumerate}
+%
+We are not encouraging you to put Easter Eggs in your programs -
+this is just an exercise.
 
 \end{ex}
-
 
 \chapter{Lists}
 
